[package]
name = "dsar"
version = "0.1.0"
edition = "2021"
license = "apache-2.0"
description = "A utility to get sar like functionality using node_exporter endpoints of multiple machines."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
ctrlc = "3.2.5"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
plotters = "0.3.4"
prometheus-parse = "0.2.4"
rayon = "1.7.0"
reqwest = { version = "0.11.16", features = ["blocking"] }
tokio = { version = "1.27.0", features = ["full"] }

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/dsar", dest = "/usr/local/bin/dsar", mode="0755" }
]
release = "1.el8"

[package.metadata.deb]
copyright = "2021, Frits Hoogland <fhoogland@yugabyte.com>"
maintainer = "Frits Hoogland <fhoogland@yugabyte.com>"
assets = [
    ["target/release/dsar", "/usr/local/bin/", "755"]
]
